<resources>
    <string name="app_name">ProyectoMoviles1</string>
    <string name="menu_principal">Menu</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_movimientos">Movimientos</string>
    <string name="titulo_inventario">Gestión de Inventario</string>
    <string name="barra_busqueda_Inv">Buscar por nombre de Producto</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="label_codigo">Código: </string>
    <string name="label_existencia">Existencia: </string>
    <string name="label_nombre">Nombre: </string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo_Productos">Gestión de Productos</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Categoria">Categoria</string>
    <string name="gestinar_Inv">Gestionar invetario</string>
    <string name="menu_crear_usuarios">Crear usuarios</string>
    <string name="usuario_titulo_crear">Crear usuario</string>
    <string name="usuario_nombre_hint">Nombre</string>
    <string name="usuario_apellido_hint">Apellido paterno</string>
    <string name="usuario_apellido2_hint">Apellido materno</string>
    <string name="usuario_correo_hint">Correo</string>
    <string name="usuario_contrasena_hint">Contraseña</string>
    <string name="usuario_es_admin">Es administrador</string>
    <string name="usuario_btn_guardar">Guardar</string>
    <string name="usuario_error_campos">Nombre, correo y contraseña son obligatorios</string>
    <string name="usuario_creado_ok">Usuario creado correctamente</string>
    <string name="usuario_creado_error">Error al crear usuario</string>
    <string name="gestinar_prod">Gestionar productos</string>
    <string name="regresar">Regresar</string>
    <string name="usuario_btn_volver">Volver</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="usuario_login_error">Usuario o contraseña incorrectos</string>
    <string name="usuario_login_user">Inicio sesión como USUARIO</string>
    <string name="campos_obligatorios">Llena todos los campos</string>
    <string name="seleccionar_item">Debe seleccionar un item</string>
    <string name="producto_actualizado">Producto actualizado</string>
    <string name="producto_prueba">Producto Prueba</string>
    <string name="cargado_activity">Cargado desde Activity</string>
    <string name="bolsa_maiz">Bolsa Maíz</string>
    <string name="saco_frijoles">Saco de Frijoles</string>
    <string name="caja_papas">Caja de Papas</string>
    <string name="producto_inicial">Producto inicial</string>
    <string name="ingrese_todos_campos">Ingrese todos los campos</string>
    <string name="movimiento_alta">ALTA</string>
    <string name="movimiento_actualizacion">ACTUALIZACION</string>
    <string name="inventario_inicial">Inventario inicial: </string>
    <string name="ajuste_existencias">Ajuste de existencias a: </string>
    <string name="titulo_movimientos">Movimientos de Inventario</string>
    <string name="texto_buscar_producto">Nombre del producto</string>
    <string name="texto_descripcion">Descripción</string>
</resources>