<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="30"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="101dp"
        android:layout_weight="80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="80"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center|left"
                android:text="@string/label_codigo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center|left"
                android:text="@string/label_nombre"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewDes"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_weight="50"
            android:gravity="center|left"
            android:text="@string/Descripcion"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
